Make captions process children normally so that whitespace-only text frames get constructed.  b=311822  r=bernd  sr=roc